Refatoração: backend recuperado